--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wickedcss.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Georama&display=swap" rel="stylesheet">
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   </head>
     <body>
       <div class="Homepage" id="HomeID">
           <img src="images/output.png" id ="headerimage">
           <div class="HomePage">
-             <a class="btn btn-success wiggle"   class="nav-link"  style="width:500px"   href="checkout.html">CLICK HERE TO ORDER</a>
+             <a class="btn btn-success wiggle" class="nav-link"  style="width:800px"  href="checkout.html">CLICK HERE TO ORDER</a>
           </div>
           <div class="container">
       <br>
