--- a/checkout.html
+++ b/checkout.html
@@ -29,6 +29,7 @@
         </div>
       </div>
     </nav>
+    <form>
 <div class="container pt-5 mt-5 ">
     <div class="card mt-5">
     <div class="card-body" >
@@ -63,15 +64,6 @@
     <option value="150">cheese(ksh 150)</option>
   </select>
 </div>
-<select class="browser-default custom-select" id="inputGroupSelect01">
-    <option selected>Choose Drink...</option>
-    <option value="150">MinuteMaid(Kshs 150)</option>
-    <option value="80">Soda 350ml(Ksh 900)</option>
-    <option value="100">Dasani(ksh 100)</option>
-    <option value="120">Soda 500ml(Ksh 120)</option>
-    <option value="250">Soda 2 litre(ksh 250)</option>
-  </select>
-</div>
 <div class="input-group">
   <select>
     <input type="number" class="form-control input" id="noOfOrders" placeholder="how many pizzas?" required>
@@ -79,10 +71,11 @@
 </div><br>
 <p class="total">Total Price:</p>
 <div class="submit">
-  <button type="button" class="btn btn-info"  id ="makeOrder">Submit</button>
+  <button type="button" class="btn btn-info"  id ="wholeOrder">Submit</button>
  </div>
     </div>
   </div>
+</form>
      <script src="js/mdb.min.js"></script>
      <script src="js/jquery-3.6.0.js"></script>
      <script src="js/script.js"></script>
