add delivery form for entering delivery details

--- a/checkout.html
+++ b/checkout.html
@@ -87,12 +87,8 @@
 <div class = "form" id="contactform">
   <!--Section: Contact v.2-->
 <section class="mb-4">
-
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Checkout Summary.</p>
-    <p class="total">Your Total Order is:</p>
+    <h2 class="text-center w-responsive mx-auto mb-5">Checkout:Enter Your Details for Delivery.</h2>
+    <p class="total">Your Total Order is:</p><p>delivery Fee of KES.120 will be added<p>
 
     <div class="row">
 
@@ -154,6 +150,9 @@
     </div>
 
 </section>
+<div class = "deliver" id="deliver">
+  <p class="delivery">Your delivery is on the way,</p>your total is Kshs.
+</div>
 <!--Section: Contact v.2-->
 </div>
     </div>
